<resources>
    <string name="app_name">OpenCV Face Detection</string>
    <string name="face_register">人臉登錄</string>
    <string name="face_verify">人臉驗證</string>
    <string name="camera_len_back">後鏡頭</string>
    <string name="camera_len_front">前鏡頭</string>
    <string name="detected_face_image">偵測到的臉部</string>
    <string name="login">Login</string>>
    <string name="enter">進入</string>>
    <string name="username">帳號</string>
    <string name="password">密碼</string>
    <string name="ok">確認</string>
    <string name="cancel">"取消"</string>
</resources>
